--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,33 @@ services:
     image: pavelinnokentevichgalanin/todocalendar_frontend:latest
     ports:
       - 9001:80
+    depends_on:
+      - backend
+  backend:
+    image: igorlukovets/todocalendar_backend:latest
+    ports:
+      - 8000:8000
+    depends_on:
+      - db
+    env_file: .env
+  db:
+    image: postgres:12-alpine
+    volumes:
+      - .:/app
+    ports:
+      - "5432:5432"
+    env_file: .env
+  watchtower:
+    image: watchtower
+    restart: always
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /etc/timezone:/etc/timezone:ro
+    environment:
+      - WATCHTOWER_CLEANUP=true
+      - WATCHTOWER_LABEL_ENABLE=true
+      - WATCHTOWER_INCLUDE_RESTARTING=true
+    labels:
+      - "com.centurylinklabs.watchtower.enable=true"
+    depends_on:
+      - frontend
