--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,16 @@ version: "3"
 services:
   frontend:
     image: pavelinnokentevichgalanin/todocalendar_frontend:latest
+    container_name: todocalendar_frontend
     ports:
       - 9001:80
     depends_on:
       - backend
   backend:
     image: igorlukovets/todocalendar_backend:latest
+    container_name: todocalendar_backend
     ports:
-      - 8000:8000
+      - 7990:8000
     depends_on:
       - db
     env_file: .env
@@ -29,9 +31,5 @@ services:
       - /etc/timezone:/etc/timezone:ro
     environment:
       - WATCHTOWER_CLEANUP=true
-      - WATCHTOWER_LABEL_ENABLE=true
       - WATCHTOWER_INCLUDE_RESTARTING=true
-    labels:
-      - "com.centurylinklabs.watchtower.enable=true"
-    depends_on:
-      - frontend
+    command: --interval 30 todocalendar_frontend todocalendar_backend
